# Session-Builder

./: .gitignore  MANIFEST.in  README.md  Session Builder Launcher.bat  Session Builder Launcher.sh  build_installer.ps1  build_installer.py  build_installer.sh  debug_imports.py  pyproject.toml  requirements.txt  session_builder.spec  session_builder_window.spec  setup-run.ps1  setup-run.sh  test_import.py  verify_wheel.py
binauralbuilder_core/: __init__.py  assembly.py  session.py  synthesis.py
binauralbuilder_core/synth_functions/: binaural_beat.py  common.py  isochronic_tone.py  noise_flanger.py  noise_wrappers_snippet.py  qam_beat_transition.py  sound_creator.py
binauralbuilder_core/utils/: noise_file.py  numba_status.py
build_hooks/: hook-binauralbuilder_core.py  hook-realtime_backend.py  hook-src.py  rthook_session_builder.py
scripts/: setup-run.ps1  setup-run.sh  setup_audio.py
session_builder/: README.md  presets.py
session_builder/audio/: rust_stream_player.py  session_builder_launcher.py  session_model.py  session_stream.py
session_builder/models/: models.py
session_builder/presets/: Blue Noise.noise  Brown Noise 1.noise  Brown Noise 2.noise  Brown Noise 3.noise  Brown Noise.noise  F10 F12 F15 F21.json  F10 F12 F15.json  F10 F12.json  F10-B.json  F11.json  F12-B.json  F15-B.json  F18.json  F19-B.json  F21-B.json  Green Noise.noise  Pink Noise.noise  Rolling Pink.noise  Sweeping Brown.noise  f19.json  session_defaults.json  std low.noise  test_color.noise
session_builder/realtime_backend/: Cargo.toml  config.toml  setup.sh
session_builder/realtime_backend/src/: command.rs  gpu.rs  lib.rs  models.rs  noise_params.rs  scheduler.rs  streaming_noise.rs  voices.rs
session_builder/realtime_backend/src/dsp/: mod.rs  noise_flanger.rs
session_builder/synth_functions/: binaural_beat.py  common.py  fx_flanger.py  isochronic_tone.py  monaural_beat_stereo_amps.py  noise_flanger.py  sound_creator.py  spatial_ambi2d.py  stereo_am_independent.py  wave_shape_stereo_am.py
session_builder/tests/: verify_presets.py
session_builder/ui/: audio_thresholder_dialog.py  binaural_encoder_dialog.py  collapsible_box.py  colored_noise_dialog.py  default_voice_dialog.py  defaults_dialog.py  frequency_tester_dialog.py  noise_generator_dialog.py  overlay_clip_dialog.py  preferences_dialog.py  session_builder_window.py  voice_detail_display_dialog.py  voice_editor_dialog.py
session_builder/utils/: colored_noise.py  numba_status.py  voice_file.py
src/: __init__.py  init.py  presets.py  realtime_backend.cp313-win_amd64.pyd
src/audio/: __init__.py  rust_stream_player.py  session_builder_launcher.py  session_engine.py  session_stream.py
src/models/: __init__.py
src/presets/: Deep Brown.noise  F12.json  Rolling Brown.noise  Rolling Green.noise  bn_low2.noise  f19 bb.json
src/realtime_backend/: README.md  WASM_GUIDE.md  pyproject.toml  setup.sh
src/realtime_backend/src/: audio_io.rs  config.rs  lib.rs  models.rs  scheduler.rs  voice_loader.rs
src/realtime_backend/src/dsp/: trig.rs
src/realtime_backend/src/shaders/: mix.wgsl
src/synth_functions/: audio_engine.py  dual_pulse_binaural.py  hybrid_qam_monaural_beat.py  noise_flanger.py  qam_beat.py  rhythmic_waveshaping.py  sound_creator.py  spatial_angle_modulation.py  spatial_itd_stable.py  subliminals.py
src/tests/: verify_presets.py
src/ui/: audio_thresholder_dialog.py  binaural_encoder_dialog.py  colored_noise_dialog.py  default_voice_dialog.py  frequency_tester_dialog.py  html_delegate.py  noise_generator_dialog.py  preferences_dialog.py  session_builder_window.py  spatial_trajectory_dialog.py  subliminal_dialog.py  themes.py  voice_detail_display_dialog.py  voice_editor_dialog.py
src/utils/: amp_utils.py  binaural_processing.py  colored_noise.py  (+4 more)
