
[package]
name = "realtime_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "realtime_backend"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "realtime_backend_cli"
path = "src/bin/realtime_backend_cli.rs"

[features]
default = ["python"]
python = ["pyo3", "crossbeam"]
web = ["wasm-bindgen", "js-sys"]
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
pyo3 = { version = "0.22.0", optional = true, features = ["extension-module"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.1"
biquad = "0.4"
rand = "0.8"
rand_distr = "0.4"
crossbeam = { version = "0.8", optional = true }
ringbuf = "0.4"
parking_lot = "0.12"
once_cell = "1.19"
symphonia = { version = "0.5.4", features = ["default", "mp3"] }
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4", features = ["derive"] }
hound = "3.5.1"
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
base64 = "0.21"
toml = "0.7"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.3"
ctrlc = "3"
